ajustando configurações do projeto

--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
