configurando client eureka

--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.profiles.active=default
 spring.application.name=hr-worker
 server.port=8001
 
+eureka.client.service-urk.defaultZone=http://localhost:8761/eureka
+
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
