--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.profiles.active=default
 spring.application.name=hr-worker
-server.port=8001
+
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.service-urk.defaultZone=http://localhost:8761/eureka
 
