--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=hr-api-gateway-zuul
+server.port=8765
+eureka.client.service-urk.defaultZone=http://localhost:8761/eureka
+
+zuul.routes.worker.service-id=hr-worker
+zuul.routes.worker.path=/hr-worker/**
+
+zuul.routes.payroll.service-id=hr-payroll
+zuul.routes.payroll.path=/hr-payroll/**
